# api/swagger.json
@@ -678,6 +678,16 @@
       "patch": {
         "operationId": "UserController_updatePreferences",
         "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdatePreferencesDto"
+              }
+            }
+          }
+        },
         "responses": {
           "401": {
             "description": "Unauthorized"
@@ -9933,6 +9943,10 @@
         ]
       },
       "RegisterPushTokenDto": {
+        "type": "object",
+        "properties": {}
+      },
+      "UpdatePreferencesDto": {
         "type": "object",
         "properties": {}
       },
